--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,18 @@ pavucontrol.ini
 xfce4/
 gtk-3.0/
 pulse/
+GIMP/
+session/
+kdeconnect/
+yay/
+dconf/
+go/
+pulse/
+Thunar/
+dolphinrc
+gtk-3.0/
+kwriterc
+droidcam
+htop/
+libreoffice/
 
