--- a/hypr/custombinds.conf
+++ b/hypr/custombinds.conf
@@ -22,6 +22,8 @@ bind = $mainMod, h, movewindow, l
 bind = $mainMod, j, movewindow, d
 bind = $mainMod, k, movewindow, u
 
+bind = $mainMod, KP_0, exec, /usr/bin/flatpak run --branch=stable --arch=x86_64 --command=floorp --file-forwarding one.ablaze.floorp
+
 # bind = $mainMod, S, exec, /home/dreamer/.config/scripts/screenshot.sh
 bind = $mainMod, V, exec, cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
 bind = CTRL, PRINT, exec, ~/.config/scripts/screenshot_region_copy.sh
