--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -99,7 +99,7 @@ env = HYPRCURSOR_SIZE,24
 general {
     gaps_in = 0
     gaps_out = 0
-    border_size = 1
+    border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(DECFC5FF) rgba(E6E6E6FF) 45deg
@@ -142,7 +142,7 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = no, please :)
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -212,12 +212,19 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = 0# -1.0 - 1.0, 0 means no modification.
+    sensitivity = -0.9# -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = false
     }
 }
+
+device {
+    name = logitech-g102-lightsync-gaming-mouse
+    sensitivity = 0
+    accel_profile = flat
+}
+
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 # gestures {
